--- a/pages/authentication-form.html
+++ b/pages/authentication-form.html
@@ -31,19 +31,14 @@
         <form id="sign-in-form">
           <div class="form-input-control">
             <label for="login-field">Login</label>
-            <input
-              type="email"
-              id="login-field"
-              placeholder="use your email as login"
-              required
-            />
+            <input type="email" id="login-field" placeholder="Email" required />
           </div>
           <div class="form-input-control">
             <label for="password-field">Password</label>
             <input
               type="password"
               id="password-field"
-              placeholder="passwords must match"
+              placeholder="Password"
               minlength="8"
               required
             />
@@ -133,7 +128,7 @@
               </select>
             </div>
             <div class="form-input-control">
-              <label for="city">City</label>
+              <label for="city" class="city">City</label>
               <select id="city">
                 <option value="" disabled selected>Select your city</option>
                 <option value="new-york">New York</option>
